--- a/frontend/PodaciKorisnika.html
+++ b/frontend/PodaciKorisnika.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -10,7 +9,9 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/nav.css">
 		<link rel="stylesheet" href="css/footer.css">
-		<link rel="stylesheet" href="css/np.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+		<link rel="stylesheet" href="css/podesavanja-PodaciKorisnika.css">
+		<link rel="stylesheet" href="css/podesavanja-template.css">
 		<title>Click and Chill</title>
 	</head>
 	<body>
@@ -56,53 +57,62 @@
 
 <!-- END NAVIGACIJA -->
 
-<div id="np-content">
-	<div class="container">
-	<div class="naslov">
-					O Nama
-	</div>
-		<div class="row">
-			<div class="col-sm"> 
-				<div class = "jumbotron jumbotron-fluid">
-					<div class= "container">
-						<h1 class="h3">
-							O Nama
-						</h1>
-						<p>
-							<b><i>Click and Chill</i></b> je deo praktične nastave na predmetu Principi softverskog inženjerstva sa ciljem da korisnicima olakša pretragu i izbor ugostiteljskih objekata.
-						</p>
-						<h1 class="h3">
-							Članovi tima:
-						</h1>
-						
-							<ul style="list-style-type:disc">
-								<li>Lаzar Ristić (tim lider)</li>
-								<li>Miloš Stupar</li>
-								<li>Viktor Galindo</li>
-								<li>Milica Šoljaga</li>
-							</ul>
-					</div>
+
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-3 submenu">
+			<div class="text-white text-center">
+				<div class="h3 py-lg-5 pt-2">Podesavanja</div>
+				<div class="row sub-link-container">
+					<div class="col-lg-12 col-md-3 col-sm-6 col-12 sub-link-wraper"> <a class="sub-link trenutna-stranica" href="">Podaci korisnika</a> </div>
+					<div class="col-lg-12 col-md-3 col-sm-6 col-12 sub-link-wraper"> <a class="sub-link" href="">Ugostiteljski objekti</a> </div>
+					<div class="col-lg-12 col-md-3 col-sm-6 col-12 sub-link-wraper"> <a class="sub-link" href="">Promeni lozinku</a> </div>
+					<div class="col-lg-12 col-md-3 col-sm-6 col-12 sub-link-wraper"> <a class="sub-link" href="">Odobri stranicu</a> </div>
 				</div>
+				
 			</div>
-			<div class="col-sm"> 
-				<div class = "jumbotron jumbotron-fluid">
-					<div class= "container">
-						<h1 class="h3">
-							Motivacija
-						</h1>
-						<p>Odluka o odlasku u neki uslužni objekat bilo da je restoran, kafić, bar, splav, itd. je oduvek dovodila i pojedince i veća društva do trenutka velike neodlučnosti. Osim faktora da prosto nekada dogovor ne može olako da padne, neinformisanost i neznanje igra veliku ulogu.</p>
-						<p>Click n Chill je aplikacija koja svim svojim korisnicima nudi mogućnost vrlo lake pretrage i filtriranje lokala koje bi mogli da posete, a da su baš po njihovoj meri.</p>
-					</div>
-					<tr></tr>
-					<tr></tr>
-				</div>
-			</div>
-			
 		</div>
-			
+		<div class="col-lg-9">
+
+			<!-- OVDE IDE KOD ZA RAZLICITE STRANICE UNUTAR PODESAVANJA -->
+			<div class="my-5 mx-5">
+				<div class="h3 mt-5 mb-4">
+					Podaci korisnika:
+				</div>
+				<div class="py-4">
+					<form>
+						<div class="row">
+						<div class="col-md-4 mb-4 px">
+							<div class="col-sm-12  slika-korisnika">
+								<img class="img-fluid img-thumbnail" src="img/account.jpg" alt>
+							</div>
+							<div class="row">
+							<div class="col-sm-12">
+								<input class="btn btn-primary" type="file" style="width:inherit">
+							</div>
+							</div>
+						</div>
+						</div>
+						<div class="row py-5">
+							<div class="col-md-6">
+									<button class="btn btn-primary w-100 my-3 py-3">
+										<i class="fas fa-save mx-2"></i>
+										Sačuvaj izmene
+									</button>
+							</div>
+							<div class="col-md-6">
+									<button class="btn btn-primary w-100 my-3 py-3">
+										<i class="fas fa-eraser mx-2"></i>
+										Odbaci izmene
+									</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
-
 
 
 <!-- FOOTER -->
