Dodao Stranicu Lokala

--- a/frontend/podesavanja-FormaPodaciUO.html
+++ b/frontend/podesavanja-FormaPodaciUO.html
@@ -80,7 +80,7 @@
 				<form>
 					<!-- NAZIV -->
 					<div class="form-group row mb-1">
-					<label for="naziv" class="col-sm-4 col-form-label text-right">Naizv:</label>
+					<label for="naziv" class="col-sm-4 col-form-label text-right">Naziv:</label>
 					<div class="col-sm-4">
 						<input type="text" class="form-control uo-polje" id="naziv" value="">
 					</div>
