--- a/frontend/stranicaLokala.html
+++ b/frontend/stranicaLokala.html
@@ -265,12 +265,12 @@
 			<div class="row mt-3">
 				<div class="h4"> Ostavite komentar:</div>
 			</div>
-				<form id="komentar">
+				<form id="komentar" action="">
 					<div class="row mt-2">
 						<div class="col-md-9">
 								<div class="form-group">
 								
-								<textarea class="form-control granica-3" rows="6" id="comment"></textarea>
+								<textarea class="form-control granica-3" rows="6" id="comment" hint="Ostavite komentar..."></textarea>
 								</div>
 						</div>
 						<div class="col-sm-2 ml-1 mr-5 justify-content-center">
@@ -299,6 +299,7 @@
 						</div>
 		
 				</form>
+		</div>
 </div>
 
 
